--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <title>Portfolio Bootstrap Jane Doe</title>
   </head>
   <body>
-    <div class="container-fluid vh-100">
+    <div class="container-fluid min-vh-100">
       <div class="container">
-        <div class="col-md-10 col-lg-6 pt-5">
+        <div class="col-md-10 col-lg-6 pt-5 px-0">
           <p class="display-1 text-white mb-4">Jane Doe</p>
           <p class="h6 text-light">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
@@ -25,10 +25,10 @@
             voluptas ex vero deleniti temporibus.
           </p>
         </div>
-        <div class="container">
-          <nav
-            class="fixed-bottom navbar navbar-dark bg-dark navbar-expand-lg px-md-5"
-          >
+        <nav
+          class="fixed-bottom navbar navbar-dark bg-dark navbar-expand-lg px-md-2"
+        >
+          <div class="container">
             <img
               src="./images/computer.svg"
               alt="Brand Logo"
@@ -64,8 +64,8 @@
                 </li>
               </ul>
             </div>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </div>
     </div>
   </body>
