adjust text color

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container-fluid min-vh-100">
       <div class="container">
         <div class="col-md-10 col-lg-6 pt-5 px-0">
-          <p class="display-1 text-white mb-4">Jane Doe</p>
-          <p class="h6 text-light">
+          <p class="display-2 text-light font-weight-bold mb-4">Jane Doe</p>
+          <p class="h5 text-white-50 font-weight-light">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
             consequuntur sequi molestias commodi dolore ad neque sit sed
             voluptatibus cumque. Magni optio quisquam, consectetur dolorum
@@ -32,10 +32,10 @@
             <img
               src="./images/computer.svg"
               alt="Brand Logo"
-              class="mr-4"
-              style="width: 50px"
+              class="mr-3"
+              style="width: 1.8rem"
             />
-            <a href="#" class="navbar-brand">Jane Doe</a>
+            <a href="#" class="navbar-brand text-light">Jane Doe</a>
 
             <button
               class="navbar-toggler ml-auto"
@@ -53,14 +53,14 @@
                 <li class="nav-item">
                   <a class="nav-link text-white" href="#">Home</a>
                 </li>
-                <li class="nav-item text-light">
-                  <a class="nav-link text-light" href="#">Services</a>
+                <li class="nav-item">
+                  <a class="nav-link text-white-50" href="#">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">About</a>
+                  <a class="nav-link text-white-50" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">Contact</a>
+                  <a class="nav-link text-white-50" href="#">Contact</a>
                 </li>
               </ul>
             </div>
