--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse">
-              <ul class="nav ml-auto">
+            <div
+              class="collapse navbar-collapse"
+              id="navbarToggleExternalContent"
+            >
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link text-white" href="#">Home</a>
                 </li>
@@ -68,5 +71,15 @@
         </nav>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
